Fixed start scripts and added default port (9090)